# openweave-wdlc

./: .gitignore  .travis.yml  CHANGELOG  CONTRIBUTING.md  Makefile.am  Makefile.in  README.md  aclocal.m4  bootstrap  configure  configure.ac  wdlc.sh.in
.travis/: before_install.sh
backend/: .gitignore  Makefile.am  Makefile.in  README.md  docs_compile.csh  gwvc  pip-install-requirements.txt  pylint.sh  schema_tests  setup.sh  wdl_plugin
backend/lib/gwv/: __init__.py  exception.py  file_utils.py  gwvc.py  json_utils.py  schema.py  template_set.py  test_schema.py  validator.py  visitor.py
backend/lib/gwv/templates/: __init__.py  base.py  c.py  cpp.py  java.py  js.py  md.py  objc.py
backend/lib/nwv/: __init__.py  nwv_parser.py  proto_pool.py  wdl_plugin.py
backend/lib/nwv/validators/: __init__.py  added_object_validator.py  changed_number_validator.py  changed_type_validator.py  duration_validator.py  enum_value_name_validator.py  extends_validator.py  filename_validator.py  iface_mapping_validator.py  map_validator.py  min_version_validator.py  name_inflection_validator.py  name_suffix_validator.py  naming_rules_validator.py  no_new_java_outer_classname_validator.py  nullable_validator.py  number_validator.py  one_byte_field_tag_validator.py  one_interface_type_validator.py  read_write_validator.py  removed_object_validator.py  stability_reference_validator.py  stability_validator.py  test_added_object_validator.py  test_enum_value_name_validator.py  test_extends_validator.py  test_filename_validator.py  test_iface_mapping_validator.py  test_map_validator.py  test_min_version_validator.py  test_name_inflection_validator.py  test_name_suffix_validator.py  test_naming_rules_validator.py  test_no_new_java_outer_classname_validator.py  test_nullable_validator.py  test_number_constraints_validator.py  test_one_byte_field_tag_validator.py  test_read_write_validator.py  test_removed_object_validator.py  test_stability_reference_validator.py  (+5 more)
codegen/: Makefile.am  Makefile.in
codegen/weave-device-cpp/: .gitignore  Makefile.am  Makefile.in
codegen/weave-device-cpp/reference/google/protobuf/: FieldMaskStructSchema.cpp  FieldMaskStructSchema.h
codegen/weave-device-cpp/reference/nest/test/resource/: TraitTestResource.h
codegen/weave-device-cpp/reference/nest/test/trait/: TestATrait-c.h  TestATrait.cpp  TestATrait.h  TestBTrait-c.h  TestBTrait.cpp  TestBTrait.h  TestCTrait-c.h  TestCTrait.cpp  TestCTrait.h  TestCommon-c.h  TestCommon.cpp  TestCommon.h  TestCommonVersioned-c.h  TestCommonVersioned.cpp  TestCommonVersioned.h  TestDTrait-c.h  TestDTrait.cpp  TestDTrait.h  TestETrait.cpp  TestETrait.h  TestFTrait-c.h  TestFTrait.cpp  TestFTrait.h  TestHTrait-c.h  TestHTrait.cpp  TestHTrait.h  TestMismatchedCTrait-c.h  TestMismatchedCTrait.cpp  TestMismatchedCTrait.h
codegen/weave-device-cpp/reference/wdl/: EventImportanceEnum.h
codegen/weave-device-cpp/reference/weave/common/: DayOfWeekEnum.h  EventIdStructSchema.cpp  EventIdStructSchema.h  InterfaceNameStructSchema.cpp  InterfaceNameStructSchema.h  ProfileSpecificStatusCodeStructSchema.cpp  ProfileSpecificStatusCodeStructSchema.h  ResourceTypeEnum.h  TimeOfDayStructSchema.cpp  TimeOfDayStructSchema.h  TimerStructSchema.cpp  TimerStructSchema.h  TraitTypeInstanceStructSchema.cpp  TraitTypeInstanceStructSchema.h
codegen/weave-device-cpp/templates/: common.macros  copyright.inc  enum.common.h  event_struct.cpp.inc  event_struct.h.inc  resource.cpp.h  struct.cpp  struct.cpp.h  trait.c.h  trait.cpp  trait.cpp.h  typespace.c.h  typespace.cpp  typespace.cpp.h
contrib/: download_protoc.sh
include/: Makefile.am  Makefile.in  wdlc-config.h.in
test/: Makefile.am  Makefile.in
test/schema/nest/test/iface/: test_basic_iface.proto  test_nested_iface.proto  test_simple_iface.proto  test_versioned_basic_iface.proto  test_z_iface.proto
test/schema/nest/test/resource/: test_z_resource.proto  trait_test_resource.proto
test/schema/nest/test/trait/: test_a_trait.proto  test_b_trait.proto  test_c_trait.proto  test_common.proto  test_common_versioned.proto  test_d_trait.proto  test_e_trait.proto  test_f_trait.proto  test_h_trait.proto  test_mismatched_c_trait.proto  test_z_trait.proto  test_z_typespace.proto
wdl/: data_access.proto  vendors.proto  wdl_options.proto
weave/common/: command_response_status.proto  identifiers.proto  resource_type.proto  string_ref.proto  time.proto  units.proto
